apps/jekyll: WIP

--- a/apps/jekyll/index.html
+++ b/apps/jekyll/index.html
@@ -1,9 +1,11 @@
 ---
-title: FreeFocus
+js: /js/app.js
 ---
 
 <div class="container">
   <div class="row">
-    <h1>FreeFocus</h1>
-  </div>
-</div>
+    <img src="{{ '/img/logo.svg' | relative_url }}" />
+
+    <pre id="console"></pre>
+  </div> <!-- /.row -->
+</div> <!-- /.container -->
