--- a/apps/jekyll/index.html
+++ b/apps/jekyll/index.html
@@ -1,11 +1,24 @@
 ---
-js: /js/app.js
+js:
+  - /js/markdown.min.js
+  - /js/app.js
 ---
+{% include navbar.html %}
 
-<div class="container">
-  <div class="row">
-    <img src="{{ '/img/logo.svg' | relative_url }}" />
+<div class="container-fluid">
+  <div id="app">
+    <div id="main-panel">
+      <div class="tasks">
+      </div>
+    </div>
 
-    <pre id="console"></pre>
-  </div> <!-- /.row -->
+    <div id="details-panel">
+      <div class="affix">
+        <div class="details">
+          {% include task-details.html %}
+        </div>
+      </div>
+    </div>
+  </div>
 </div> <!-- /.container -->
+</div> <!-- #app -->
